corrigido link css

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Café</title>
-    <link rel="shortcut icon" href="/src/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="src/images/favicon.ico" type="image/x-icon">
     <meta name="description" content="Cafeteria especializada em cafés de alta qualidade">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@300;400;600&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/src/css/reset.css">
-    <link rel="stylesheet" href="/src/css/style.css">
-    <link rel="stylesheet" href="/src/css/responsive.css">
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/responsive.css">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
 
         <section class="secao-com-texto" id="quem-somos">
             <header>
-                <img src="/src/images/logo-secoes.png">
+                <img src="src/images/logo-secoes.png">
                 <h2>Quem Somos</h2>
             </header>
             <p>Essa é uma landing page responsiva, funciona tanto em desktops como em celulares. É uma bela página de apresentação para um negócio, como essa cafeteria, por exemplo, há boas imagens e as informações necessárias.</p>
@@ -54,7 +54,7 @@
 
         <section class="secao-com-texto onde-estamos" id="onde-estamos">
             <header>
-                <img src="/src/images/logo-secoes.png">
+                <img src="src/images/logo-secoes.png">
                 <h2>Onde Estamos</h2>
             </header>
             <p>
@@ -77,7 +77,7 @@
 
     <footer class="rodape">
         <a href="index.html" class="logo">
-            <img src="/src/images/logo.jpg">
+            <img src="src/images/logo.jpg">
         </a>
 
         <ul>
@@ -89,11 +89,11 @@
         <div class="conteudo-de-baixo">
             <div class="redes-sociais">
                 <a href="#" target="_blank">
-                    <img class="facebook" title="Logo Facebook" alt="Logo Facebook" src="/src/images/face.png">
+                    <img class="facebook" title="Logo Facebook" alt="Logo Facebook" src="src/images/face.png">
                 </a>
             
                 <a href="#" target="_blank">
-                    <img class="instagram" title="Logo Instagram" alt="Logo Instagram" src="/src/images/insta.png">
+                    <img class="instagram" title="Logo Instagram" alt="Logo Instagram" src="src/images/insta.png">
                 </a>
             </div>
             <div class="copyright">© 2022 Code Café</div>
